minikube/k8s/main-depl-pi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-deployment
  labels:
    app: main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: northamerica-northeast2-docker.pkg.dev/pikube-369400/k3s/dice/main.arm64:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: main-service
spec:
  selector:
    app: main
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
