minikube/k8s/server-depl-pi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  labels:
    app: server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: northamerica-northeast2-docker.pkg.dev/pikube-369400/k3s/dice/server.arm64:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  clusterIP: None # headless service for gRPC load balancing
  selector:
    app: server
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
